--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,83 @@ img {
   letter-spacing: 0.03em;
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-btn {
+  min-width: 200px;
+  padding: 10px 32px;
+  border-style: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--tertiary-text-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  transition: background-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #188ce8;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-background-color);
+  cursor: pointer;
+  transition: fill var(--animation-duration) var(--animation-timing-function);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: var(--accent-color);
+}
+
+.submit-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 28px;
+  min-width: 200px;
+  background-color: var(--accent-color);
+  color: var(--tertiary-text-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-style: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: #188ce8;
+}
+
 .social-links {
   display: flex;
   justify-content: space-between;
@@ -101,12 +178,154 @@ img {
   background-color: var(--accent-color);
 }
 
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--animation-duration) var(--animation-timing-function), visibility var(--animation-duration) var(--animation-timing-function);
+  opacity: 1;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  width: 528px;
+  height: 580px;
+  text-align: center;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.9);
+  opacity: 1;
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--animation-duration) var(--animation-timing-function), opacity var(--animation-duration) var(--animation-timing-function);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 0;
+}
+
+.signup-form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.signup-form-title {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.signup-form-text {
+  display: block;
+  text-align: left;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+}
+
+.signup-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.signup-form-input {
+  width: 100%;
+  padding: 12px 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  color: var(--primary-text-color);
+  transition: border-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.signup-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 14px;
+  transition: fill var(--animation-duration) var(--animation-timing-function);
+}
+
+.signup-form-input:focus + .signup-icon {
+  fill: var(--accent-color);
+}
+
+.signup-form-message {
+  display: block;
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  resize: none;
+  color: var(--primary-text-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.signup-form-input:focus,
+.signup-form-message:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+.signup-form-message::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.signup-checkbox-field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+.signup-checkbox-link {
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+
+.checkbox-icon {
+  margin-right: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid #000000;
+  border-radius: 3px;
+  transition: border-color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
+}
+
+.signup-checkbox-input:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  border: 0.2px solid #FFFFFF;
+}
+
+.signup-checkbox-input:focus + .checkbox-icon {
+  border-color: var(--accent-color);
 }
 
 .header {
@@ -229,28 +448,6 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--tertiary-text-color);
-}
-
-.modal-btn {
-  min-width: 200px;
-  padding: 10px 32px;
-  border-style: none;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--tertiary-text-color);
-  background-color: var(--accent-color);
-  cursor: pointer;
-  transition: background-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.modal-btn:hover,
-.modal-btn:focus {
-  background-color: #188ce8;
 }
 
 .advantages-items {
@@ -622,204 +819,7 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.submit-btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 28px;
-  min-width: 200px;
-  background-color: var(--accent-color);
-  color: var(--tertiary-text-color);
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-style: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.submit-btn:hover,
-.submit-btn:focus {
-  background-color: #188ce8;
-}
-
-.submit-btn > span {
-  margin-right: 10px;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity var(--animation-duration) var(--animation-timing-function), visibility var(--animation-duration) var(--animation-timing-function);
-  opacity: 1;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.modal {
-  width: 528px;
-  height: 580px;
-  text-align: center;
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0.9);
-  opacity: 1;
-  background-color: var(--primary-background-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transition: transform var(--animation-duration) var(--animation-timing-function), opacity var(--animation-duration) var(--animation-timing-function);
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1);
-  opacity: 0;
-}
-
-.modal-close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--primary-background-color);
-  cursor: pointer;
-  transition: fill var(--animation-duration) var(--animation-timing-function);
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  fill: var(--accent-color);
-}
-
-.signup-form-field {
-  display: block;
-  margin-bottom: 10px;
-}
-
-.signup-form-title {
-  display: block;
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
-.signup-form-text {
-  display: block;
-  text-align: left;
-  margin-bottom: 4px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--secondary-text-color);
-}
-
-.signup-form-input-wrapper {
-  display: block;
-  position: relative;
-}
-
-.signup-form-input {
-  width: 100%;
-  padding: 12px 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  color: var(--primary-text-color);
-  transition: border-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.signup-icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 14px;
-  transition: fill var(--animation-duration) var(--animation-timing-function);
-}
-
-.signup-form-input:focus + .signup-icon {
-  fill: var(--accent-color);
-}
-
-.signup-form-message {
-  display: block;
-  width: 100%;
-  height: 120px;
-  margin-bottom: 20px;
-  padding: 12px 16px;
-  resize: none;
-  color: var(--primary-text-color);
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.signup-form-input:focus,
-.signup-form-message:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-
-.signup-form-message::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.signup-checkbox-field {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-}
-
-.signup-checkbox-link {
-  text-decoration-line: underline;
-  color: var(--accent-color);
-}
-
-.checkbox-icon {
-  margin-right: 10px;
-  cursor: pointer;
-  background-color: transparent;
-  border: 2px solid #000000;
-  border-radius: 3px;
-  transition: border-color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.signup-checkbox-input:checked + .checkbox-icon {
-  background-color: var(--accent-color);
-  border: 0.2px solid #FFFFFF;
-}
-
-.signup-checkbox-input:focus + .checkbox-icon {
-  border-color: var(--accent-color);
+.submit-icon {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=main.css.map */
