--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -116,33 +116,6 @@
     color: rgba(255, 255, 255, 0.6)
 }
 
-.submit-btn {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 28px;
-    min-width: 200px;
-
-    background-color: var(--accent-color);
-    color: var(--tertiary-text-color);
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-style: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color var(--animation-duration) var(--animation-timing-function);
-}
-
-.submit-btn:hover,
-.submit-btn:focus {
-    background-color: #188ce8;
-}
-
-.submit-btn>span {
-    margin-right: 10px;
+.submit-icon{
+    margin-left: 10px;
 }
