code's refactoring according to BEM

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ img {
   padding-bottom: 94px;
 }
 
-.section-title {
+.section__title {
   margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
@@ -108,7 +108,7 @@ img {
   background-color: #188ce8;
 }
 
-.modal-close-btn {
+.modal-btn--close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -125,9 +125,31 @@ img {
   transition: fill var(--animation-duration) var(--animation-timing-function);
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal-btn--close:hover,
+.modal-btn--close:focus {
   fill: var(--accent-color);
+}
+
+.radio-btn {
+  padding: 6px 22px;
+  border-style: none;
+  border-radius: 4px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  background-color: var(--tertiary-background-color);
+  cursor: pointer;
+  transition: color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function), box-shadow var(--animation-duration) var(--animation-timing-function);
+}
+
+.radio-btn:hover,
+.radio-btn:focus {
+  color: var(--tertiary-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .submit-btn {
@@ -155,27 +177,31 @@ img {
   background-color: #188ce8;
 }
 
-.social-links {
+.social-links__list {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.social-link {
+.social-links__link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: var(--icon-fill);
   transition: fill var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
+  fill: var(--icon-fill);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-links__link:hover,
+.social-links__link:focus {
   fill: var(--primary-background-color);
   background-color: var(--accent-color);
+}
+
+.social-links--right:not(:last-child) {
+  margin-right: 10px;
 }
 
 .backdrop {
@@ -216,12 +242,12 @@ img {
   opacity: 0;
 }
 
-.signup-form-field {
+.signup-form__field {
   display: block;
   margin-bottom: 10px;
 }
 
-.signup-form-title {
+.signup-form__title {
   display: block;
   margin-bottom: 12px;
   font-weight: 700;
@@ -232,7 +258,7 @@ img {
   color: var(--primary-text-color);
 }
 
-.signup-form-text {
+.signup-form__text {
   display: block;
   text-align: left;
   margin-bottom: 4px;
@@ -242,12 +268,12 @@ img {
   color: var(--secondary-text-color);
 }
 
-.signup-form-input-wrapper {
+.signup-form__wrapper {
   display: block;
   position: relative;
 }
 
-.signup-form-input {
+.signup-form__input {
   width: 100%;
   padding: 12px 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -264,11 +290,11 @@ img {
   transition: fill var(--animation-duration) var(--animation-timing-function);
 }
 
-.signup-form-input:focus + .signup-icon {
+.signup-form__input:focus + .signup-icon {
   fill: var(--accent-color);
 }
 
-.signup-form-message {
+.signup-form__message {
   display: block;
   width: 100%;
   height: 120px;
@@ -281,20 +307,20 @@ img {
   transition: border-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.signup-form-input:focus,
-.signup-form-message:focus {
+.signup-form__input:focus,
+.signup-form__message:focus {
   border-color: var(--accent-color);
   outline: none;
 }
 
-.signup-form-message::placeholder {
+.signup-form__message::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.signup-checkbox-field {
+.checkbox {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -305,12 +331,12 @@ img {
   color: var(--secondary-text-color);
 }
 
-.signup-checkbox-link {
+.checkbox__link {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
 
-.checkbox-icon {
+.checkbox__icon {
   margin-right: 10px;
   cursor: pointer;
   background-color: transparent;
@@ -319,12 +345,12 @@ img {
   transition: border-color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.signup-checkbox-input:checked + .checkbox-icon {
+.checkbox__input:checked + .checkbox__icon {
   background-color: var(--accent-color);
   border: 0.2px solid #FFFFFF;
 }
 
-.signup-checkbox-input:focus + .checkbox-icon {
+.checkbox__input:focus + .checkbox__icon {
   border-color: var(--accent-color);
 }
 
@@ -332,7 +358,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
 }
@@ -349,20 +375,20 @@ img {
   color: var(--accent-color);
 }
 
-.logo-header-color {
+.logo--color {
   color: #000000;
 }
 
-.nav-list {
+.nav__list {
   display: flex;
   align-items: center;
 }
 
-.nav-list-item:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-list-link {
+.nav__link {
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -373,17 +399,17 @@ img {
   transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
-.nav-list-link:hover,
-.nav-list-link:focus {
+.nav__link:hover,
+.nav__link:focus {
   color: var(--accent-color);
 }
 
-.active-page {
+.nav__link--active {
   color: var(--accent-color);
   position: relative;
 }
 
-.active-page::after {
+.nav__link--active::after {
   content: '';
   position: absolute;
   left: 0;
@@ -394,17 +420,17 @@ img {
   border-radius: 2px;
 }
 
-.header-contacts-list {
+.header-contacts {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
 
-.header-contacts-mail {
+.header-contacts__mail {
   margin-right: 50px;
 }
 
-.header-contacts {
+.header-contacts__link {
   display: flex;
   align-items: center;
   padding-top: 32px;
@@ -417,17 +443,17 @@ img {
   transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
-.contacts-icon {
+.header-contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.header-contacts:hover,
-.header-contacts:focus {
+.header-contacts__link:hover,
+.header-contacts__link:focus {
   color: var(--accent-color);
 }
 
-.hero-section {
+.hero {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -440,7 +466,7 @@ img {
   background-color: var(--secondary-background-color);
 }
 
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -450,17 +476,19 @@ img {
   color: var(--tertiary-text-color);
 }
 
-.advantages-items {
+.advantages__list {
   display: flex;
   margin-left: -30px;
+  margin-top: -30px;
 }
 
-.advantages-item {
+.advantages__item {
   flex-basis: calc((100% - 4 * 30px) / 4);
   margin-left: 30px;
+  margin-top: 30px;
 }
 
-.icon-box {
+.advantages__card-box {
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
@@ -471,7 +499,7 @@ img {
   border-radius: 4px;
 }
 
-.advantages-item-title {
+.advantages__title {
   margin-bottom: 10px;
   font-weight: bold;
   font-size: 14px;
@@ -480,27 +508,27 @@ img {
   text-transform: uppercase;
 }
 
-.advantages-item-description {
+.advantages__description {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
-.activities-section {
+.activities {
   padding-top: 0;
 }
 
-.activities-items {
+.activities__list {
   display: flex;
   justify-content: space-between;
 }
 
-.activities-item {
+.activities__item {
   position: relative;
 }
 
-.activities-description {
+.activities__description {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -517,18 +545,18 @@ img {
   transform: translateY(-100%);
 }
 
-.team-section {
+.team {
   background-color: var(--tertiary-background-color);
 }
 
-.team-cards {
+.team__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.team-card {
+.team__card {
   flex-basis: calc((100% - 4 * 30px) / 4);
   margin-left: 30px;
   margin-top: 30px;
@@ -537,13 +565,13 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-card-description {
+.team__card-box {
   padding: 30px 32px;
   text-align: center;
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item {
+.team__member {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -551,7 +579,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-.team-text {
+.team__position {
   margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
@@ -560,18 +588,18 @@ img {
   color: var(--secondary-text-color);
 }
 
-.clients .section-title {
+.clients .section__title {
   margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.clients-item {
+.clients__item {
   height: 92px;
   width: 170px;
   flex-basis: calc((100% - 6 * 30px) / 6);
@@ -579,7 +607,7 @@ img {
   margin-left: 30px;
 }
 
-.clients-link {
+.clients__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -591,77 +619,55 @@ img {
   transition: color var(--animation-duration) var(--animation-timing-function), border-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.clients-logo {
+.clients__logo {
   fill: currentColor;
 }
 
-.radio-btn-list {
+.filter__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.radio-btn-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.radio-btn {
-  padding: 6px 22px;
-  border-style: none;
-  border-radius: 4px;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-  background-color: var(--tertiary-background-color);
-  cursor: pointer;
-  transition: color var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function), box-shadow var(--animation-duration) var(--animation-timing-function);
-}
-
-.radio-btn:hover,
-.radio-btn:focus {
-  color: var(--tertiary-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.work-examples-list {
+.work-examples__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.work-example-item {
+.work-examples__item {
   flex-basis: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
 }
 
-.work-example-link {
+.work-examples__link {
   display: block;
   transition: box-shadow var(--animation-duration) var(--animation-timing-function);
 }
 
-.work-example-link:hover,
-.work-example-link:focus {
+.work-examples__link:hover,
+.work-examples__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-example-card {
+.work-examples__card {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
 
-.work-example-title {
+.work-examples__title {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -670,19 +676,19 @@ img {
   color: var(--primary-text-color);
 }
 
-.work-example-description {
+.work-examples__description {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
-.work-example-wrapper {
+.image__wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.work-example-overlay {
+.overlay__text {
   position: absolute;
   top: 0;
   left: 0;
@@ -699,8 +705,8 @@ img {
   transition: transform var(--animation-duration) var(--animation-timing-function);
 }
 
-.work-example-link:hover .work-example-overlay,
-.work-example-link:focus .work-example-overlay {
+.work-examples__link:hover .overlay__text,
+.work-examples__link:focus .overlay__text {
   transform: translateY(0%);
 }
 
@@ -710,7 +716,16 @@ img {
   background-color: var(--secondary-background-color);
 }
 
-.logo-footer {
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-contacts__box {
+  margin-right: 70px;
+}
+
+.footer-logo {
   display: inline-block;
   margin-bottom: 20px;
   font-family: var(--secondary-font-family);
@@ -721,43 +736,33 @@ img {
   color: var(--accent-color);
 }
 
-.logo-footer-color {
+.footer-logo--color {
   color: var(--tertiary-text-color);
 }
 
-.address-item:not(:last-child) {
+.footer-contacts__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.address {
+.footer-contacts__link {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--tertiary-text-color);
+  color: rgba(255, 255, 255, 0.6);
   transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
-.address:hover,
-.address:focus {
+.footer-contacts__link--color {
+  color: var(--tertiary-text-color);
+}
+
+.footer-contacts__link:hover,
+.footer-contacts__link:focus {
   color: var(--accent-color);
 }
 
-.footer-mail,
-.footer-number {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-address {
-  margin-right: 70px;
-}
-
-.footer-text {
+.footer__text {
   display: block;
   margin-bottom: 20px;
   font-weight: 700;
@@ -768,39 +773,16 @@ img {
   color: var(--tertiary-text-color);
 }
 
-.footer-social-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
+.footer__social-links {
   fill: var(--primary-background-color);
   background-color: rgba(255, 255, 255, 0.1);
-  transition: fill var(--animation-duration) var(--animation-timing-function), background-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.footer-social-links li:not(:last-child) {
-  margin-right: 10px;
-}
-
-.footer-social-link:hover,
-.footer-social-link:focus {
-  fill: var(--primary-background-color);
-  background-color: var(--accent-color);
-}
-
-.footer-form {
+.footer__wrapper--left {
   margin-left: auto;
 }
 
-.footer-contact-form-input {
+.contact-form__input {
   padding: 16px;
   margin-right: 12px;
   width: 358px;
@@ -812,14 +794,14 @@ img {
   border-radius: 4px;
 }
 
-.footer-contact-form-input::placeholder {
+.contact-form__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
-.submit-icon {
+.submit-btn__icon {
   margin-left: 10px;
 }
 /*# sourceMappingURL=main.css.map */
