--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -41,7 +41,7 @@ img {
     padding-bottom: 94px;
 }
 
-.section-title {
+.section__title {
     margin-bottom: 50px;
     text-align: center;
     font-weight: 700;
