--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -1,23 +1,27 @@
-.social-links {
+.social-links__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.social-link {
+.social-links__link {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    fill: var(--icon-fill);
-    transition: fill var(--animation-duration) var(--animation-timing-function),
+        transition: fill var(--animation-duration) var(--animation-timing-function),
         background-color var(--animation-duration) var(--animation-timing-function);
+    fill: var(--icon-fill);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social-links__link:hover,
+.social-links__link:focus {
     fill: var(--primary-background-color);
     background-color: var(--accent-color);
+}
+
+.social-links--right:not(:last-child) {
+    margin-right: 10px;
 }
