--- a/sass/layout/_activities.scss
+++ b/sass/layout/_activities.scss
@@ -1,17 +1,17 @@
-.activities-section {
+.activities {
     padding-top: 0;
 }
 
-.activities-items {
+.activities__list {
     display: flex;
     justify-content: space-between;
 }
 
-.activities-item {
+.activities__item {
     position: relative;
 }
 
-.activities-description {
+.activities__description {
     font-weight: bold;
     font-size: 14px;
     line-height: 1.14;
@@ -19,7 +19,6 @@
     text-transform: uppercase;
     color: var(--tertiary-text-color);
     background-color: rgba(47, 48, 58, 0.8);
-
     position: absolute;
     display: flex;
     justify-content: center;
