--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,15 +1,15 @@
-.clients .section-title {
+.clients .section__title {
     margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
     display: flex;
     flex-wrap: wrap;
     margin-top: -30px;
     margin-left: -30px;
 }
 
-.clients-item {
+.clients__item {
     height: 92px;
     width: 170px;
     flex-basis: calc((100% - 6 * 30px) / 6);
@@ -18,7 +18,7 @@
 
 }
 
-.clients-link {
+.clients__link {
     width: 100%;
     height: 100%;
     display: flex;
@@ -31,12 +31,12 @@
         border-color var(--animation-duration) var(--animation-timing-function);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
     color: var(--accent-color);
     border-color: var(--accent-color);
 }
 
-.clients-logo {
+.clients__logo {
     fill: currentColor;
     }
