--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,19 +19,19 @@
     color: var(--accent-color);
 }
 
-.logo-header-color {
+.logo--color {
     color: #000000;
 }
-.nav-list {
+.nav__list {
     display: flex;
     align-items: center;
 }
 
-.nav-list-item:not(:last-child) {
+.nav__item:not(:last-child) {
     margin-right: 50px;
 }
 
-.nav-list-link {
+.nav__link {
     padding-top: 32px;
     padding-bottom: 32px;
     font-weight: 500;
@@ -42,17 +42,17 @@
     transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
-.nav-list-link:hover,
-.nav-list-link:focus {
+.nav__link:hover,
+.nav__link:focus {
     color: var(--accent-color);
 }
 
-.active-page {
+.nav__link--active {
     color: var(--accent-color);
     position: relative;
 }
 
-.active-page::after {
+.nav__link--active::after {
     content: '';
     position: absolute;
     left: 0;
@@ -63,17 +63,17 @@
     border-radius: 2px;
 }
 
-.header-contacts-list {
+.header-contacts {
     display: flex;
     align-items: center;
     margin-left: auto;
 }
 
-.header-contacts-mail {
+.header-contacts__mail {
     margin-right: 50px;
 }
 
-.header-contacts {
+.header-contacts__link {
     display: flex;
     align-items: center;
     padding-top: 32px;
@@ -86,12 +86,12 @@
     transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
-.contacts-icon {
+.header-contacts__icon {
     margin-right: 10px;
     fill: currentColor;
 }
 
-.header-contacts:hover,
-.header-contacts:focus {
+.header-contacts__link:hover,
+.header-contacts__link:focus {
     color: var(--accent-color);
 }
