--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,4 @@
-.hero-section {
+.hero {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
@@ -12,7 +12,7 @@
     background-color: var(--secondary-background-color);
 }
 
-.hero-title {
+.hero__title {
     margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
