--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,69 +1,44 @@
-.radio-btn-list {
+.filter__list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.radio-btn-item:not(:last-child) {
+.filter__item:not(:last-child) {
     margin-right: 8px;
 }
 
-.radio-btn {
-    padding: 6px 22px;
-    border-style: none;
-    border-radius: 4px;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    background-color: var(--tertiary-background-color);
-    cursor: pointer;
 
-    transition: color var(--animation-duration) var(--animation-timing-function),
-        background-color var(--animation-duration) var(--animation-timing-function),
-        box-shadow var(--animation-duration) var(--animation-timing-function);
-}
-
-.radio-btn:hover,
-.radio-btn:focus {
-    color: var(--tertiary-text-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.work-examples-list {
+.work-examples__list {
     display: flex;
     flex-wrap: wrap;
     margin-top: -30px;
     margin-left: -30px;
 }
 
-.work-example-item {
+.work-examples__item {
     flex-basis: calc((100% - 90px) / 3);
     margin-top: 30px;
     margin-left: 30px;
 }
 
-.work-example-link {
+.work-examples__link {
     display: block;
     transition: box-shadow var(--animation-duration) var(--animation-timing-function);
 }
 
-.work-example-link:hover,
-.work-example-link:focus {
+.work-examples__link:hover,
+.work-examples__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-example-card {
+.work-examples__card {
     padding: 20px 24px;
     border: 1px solid #eeeeee;
 }
 
-.work-example-title {
+.work-examples__title {
     margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
@@ -72,19 +47,19 @@
     color: var(--primary-text-color);
 }
 
-.work-example-description {
+.work-examples__description {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
 
-.work-example-wrapper {
+.image__wrapper {
     position: relative;
     overflow: hidden;
 }
 
-.work-example-overlay {
+.overlay__text {
     position: absolute;
     top: 0;
     left: 0;
@@ -103,7 +78,7 @@
     transition: transform var(--animation-duration) var(--animation-timing-function);
 }
 
-.work-example-link:hover .work-example-overlay,
-.work-example-link:focus .work-example-overlay {
+.work-examples__link:hover .overlay__text,
+.work-examples__link:focus .overlay__text {
     transform: translateY(0%);
 }
