--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,15 +1,15 @@
-.team-section {
+.team {
     background-color: var(--tertiary-background-color);
 }
 
-.team-cards {
+.team__list {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
 }
 
-.team-card {
+.team__card {
     flex-basis: calc((100% - 4 * 30px) / 4);
     margin-left: 30px;
     margin-top: 30px;
@@ -19,13 +19,13 @@
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-card-description {
+.team__card-box {
     padding: 30px 32px;
     text-align: center;
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-item {
+.team__member {
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
@@ -33,7 +33,7 @@
     letter-spacing: 0.03em;
 }
 
-.team-text {
+.team__position {
     margin-bottom: 16px;
     font-weight: 400;
     font-size: 16px;
